# vfllwiki

./: .gitignore  Dokumentation.md  Git HowTo.md  KollTool.md  Markdown.md  Mitarbeit.md  Mkdocs.md  README.md  build.js  mkdocs.yml  pyproject.toml  requirements.txt  resize_images.py
.github/workflows/: docs.yml
.obsidian/: community-plugins.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
.vuepress/: config.js
.vuepress/public/: sitemap.txt
.vuepress/styles/: index.scss
docs/: aufgaben.md  bbb.md  documents.md  index.md  nextcloud.md  polls.md  profiles.md  teams.md  test.md  zoom.md
docs/.overrides/: 404.html
docs/attachments/: KollTool_BBB-Meetings_2025-01-10.odt  bbb.md
